Ajuste filtros e tabela

--- a/declimobtransp_004/webapp/i18n/i18n.properties
+++ b/declimobtransp_004/webapp/i18n/i18n.properties
@@ -18,9 +18,9 @@ mainViewTitle=Declaração de Transporte Imobilizado
 
 mainViewTableTitle=Baixas de Imobilizados
 
-mainViewfooterButtonExecute=Executar
+mainViewfooterButtonGenerate=Gerar Declaração de Transporte
 
 
-messageWarningFillInput=Preencha ao menos um documento para seguir com a alteração!
+messageWarningSelectedLine=Selecione ao menos um documento para geração do PDF!
 
 messageErrorModifyDocuments=Erro ao modificar documento(s). Por favor tente novamente!
