--- a/declimobtransp_004/webapp/i18n/i18n.properties
+++ b/declimobtransp_004/webapp/i18n/i18n.properties
@@ -20,6 +20,19 @@ mainViewTableTitle=Baixas de Imobilizados
 
 mainViewfooterButtonGenerate=Gerar Declaração de Transporte
 
+mainTableCompany=Empresa
+mainTablePlant=Centro
+mainTableImmobilizedClass=Classe Imobilizado
+mainTableMainFixedNumber=Nº principal imobilizado
+mainTableExercise=Exercício
+mainTableFixedSubNumber=Subnº imobilizado 
+mainTableDescriptionFixedAssets=Descrição imobilizado
+mainTableReleaseDate=Data de lançamento no documento
+mainTableTheAmount=Quantidade
+mainTableBasicUnitOfMeasure=Unidade de medida básica
+mainTableAccountingDocumentNumber=Nº documento contábil
+mainTableAssetMovementType=Tipo de movimento do imobilizado
+mainTablePostedAmount=Montante lançado
 
 messageWarningSelectedLine=Selecione ao menos um documento para geração do PDF!
 
