ajuste filtros e tabela

--- a/declimobtransp_004/webapp/i18n/i18n.properties
+++ b/declimobtransp_004/webapp/i18n/i18n.properties
@@ -18,14 +18,15 @@ mainViewTitle=Declaração de Transporte Imobilizado
 
 mainViewTableTitle=Baixas de Imobilizados
 
+mainExportExcel=Excel
+
 mainViewfooterButtonGenerate=Gerar Declaração de Transporte
 
 mainTableCompany=Empresa
 mainTablePlant=Centro
 mainTableImmobilizedClass=Classe Imobilizado
 mainTableMainFixedNumber=Nº principal imobilizado
-mainTableExercise=Exercício
-mainTableFixedSubNumber=Subnº imobilizado 
+mainTableFixedSubNumber=Subnº imobilizado
 mainTableDescriptionFixedAssets=Descrição imobilizado
 mainTableReleaseDate=Data de lançamento no documento
 mainTableTheAmount=Quantidade
@@ -35,5 +36,6 @@ mainTableAssetMovementType=Tipo de movimento do imobilizado
 mainTablePostedAmount=Montante lançado
 
 messageWarningSelectedLine=Selecione ao menos um documento para geração do PDF!
+messageWarningDocumentNumberDifferent=Para fazer a geração de Declaração de Transporte, é preciso que as linhas selecionadas tenham o campo Nº documento contábil (BELNR) em comum!
 
 messageErrorModifyDocuments=Erro ao modificar documento(s). Por favor tente novamente!
