ajuste do dialog do transporte

--- a/declimobtransp_004/webapp/i18n/i18n.properties
+++ b/declimobtransp_004/webapp/i18n/i18n.properties
@@ -22,18 +22,14 @@ mainExportExcel=Excel
 
 mainViewfooterButtonGenerate=Gerar Declaração de Transporte
 
-mainTableCompany=Empresa
-mainTablePlant=Centro
-mainTableImmobilizedClass=Classe Imobilizado
-mainTableMainFixedNumber=Nº principal imobilizado
-mainTableFixedSubNumber=Subnº imobilizado
-mainTableDescriptionFixedAssets=Descrição imobilizado
-mainTableReleaseDate=Data de lançamento no documento
-mainTableTheAmount=Quantidade
-mainTableBasicUnitOfMeasure=Unidade de medida básica
-mainTableAccountingDocumentNumber=Nº documento contábil
-mainTableAssetMovementType=Tipo de movimento do imobilizado
-mainTablePostedAmount=Montante lançado
+dialogHeaderTitle=Característica do Transporte
+dialogSupplierTransporter=Fornecedor/Transportador
+dialogLicensePlate=Placa do Veículo
+dialogCNPJAndCPF=CNPJ/CPF
+dialogEmbPed=Emb/Ped
+dialogVolumes=Volumes
+
+dialogSupplier=Fornecedor
 
 messageWarningSelectedLine=Selecione ao menos um documento para geração do PDF!
 messageWarningDocumentNumberDifferent=Para fazer a geração de Declaração de Transporte, é preciso que as linhas selecionadas tenham o campo Nº documento contábil (BELNR) em comum!
