ajuste search help

--- a/declimobtransp_004/webapp/i18n/i18n.properties
+++ b/declimobtransp_004/webapp/i18n/i18n.properties
@@ -31,6 +31,9 @@ dialogVolumes=Volumes
 
 dialogSupplier=Fornecedor
 
+dialogSupplierCode=Código Fornecedor
+dialogSupplierDescription=Descrição
+
 messageWarningSelectedLine=Selecione ao menos um documento para geração do PDF!
 messageWarningDocumentNumberDifferent=Para fazer a geração de Declaração de Transporte, é preciso que as linhas selecionadas tenham o campo Nº documento contábil (BELNR) em comum!
 
