chamada de pdf e tela de tranporte

--- a/declimobtransp_004/webapp/i18n/i18n.properties
+++ b/declimobtransp_004/webapp/i18n/i18n.properties
@@ -34,6 +34,9 @@ dialogSupplier=Fornecedor
 dialogSupplierCode=Código Fornecedor
 dialogSupplierDescription=Descrição
 
+dialogSupplierCancel=Cancelar
+dialogSupplierConfirm=Confirmar
+
 messageWarningSelectedLine=Selecione ao menos um documento para geração do PDF!
 messageWarningDocumentNumberDifferent=Para fazer a geração de Declaração de Transporte, é preciso que as linhas selecionadas tenham o campo Nº documento contábil (BELNR) em comum!
 
