Ajustes tabela e filtros

--- a/launchddctloss_001/webapp/i18n/i18n.properties
+++ b/launchddctloss_001/webapp/i18n/i18n.properties
@@ -46,6 +46,12 @@ dialogReturnBapisTitle=Logs dos lançamentos(Perdas Dedutíveis)
 mainTableMessage=Mensagem
 mainTableType=Tipo Status
 
+dialogPersonalizationTable=Configurações da visão
+dialogPersonalizationTableConfirm=Ok
+dialogPersonalizationTableCancel=Cancelar
+
+dialogPersonalizationTableColumns=Columns
+
 messageWarningSelectLines=Selecione pelo menos uma perda dedutível para fazer o lançamento!
 
 messageErrorSearchData=Erro ao buscar Perdas Dedutíveis de clientes. Por favor tente novamente!
