ajuste coluna nova na tabela

--- a/customertitles_004/webapp/i18n/i18n.properties
+++ b/customertitles_004/webapp/i18n/i18n.properties
@@ -27,6 +27,7 @@ mainTableCompany=Empresa
 mainTableCompanyName=Nome da Empresa
 mainTableClient=Cliente
 mainTableCustomerName=Nome do Cliente
+mainTableDocumentNumber=Lançamento contábil
 mainTableDocumentType=Tipo de documento
 mainTableDocumentNumber=Nº documento
 mainTableItem=Item
