ajuste colunas e visibilidade de coluna/filtros

--- a/customertitles_004/webapp/i18n/i18n.properties
+++ b/customertitles_004/webapp/i18n/i18n.properties
@@ -62,6 +62,12 @@ mainTableMessage=Mensagem
 mainTableType=Tipo Status
 dialogReturnBapisCancel=Fechar
 
+dialogPersonalizationTable=Configurações da visão
+dialogPersonalizationTableConfirm=Ok
+dialogPersonalizationTableCancel=Cancelar
+
+dialogPersonalizationTableColumns=Colunas
+
 messageWarningAmountAllocatedFill=Preencha pelo menos um campo no montante alocado para realizar a compensação!
 
 messageErrorSearchData=Erro ao buscar títulos de clientes. Por favor tente novamente!
