ajuste validação de compensação de contas

--- a/customertitles_004/webapp/i18n/i18n.properties
+++ b/customertitles_004/webapp/i18n/i18n.properties
@@ -1,5 +1,3 @@
-# This is the resource bundle for Monitor Nota Fiscal
-
 #XTIT: Application name
 appTitle=Títulos de Clientes
 
@@ -56,7 +54,6 @@ dialogClieSecurClearHeaderText=Texto de cabeçalho
 dialogClieSecurClearThrow=Lançar
 dialogClieSecurClearCancel=Cancelar
 
-
 dialogReturnBapisTitle=Logs dos lançamentos(Títulos de clientes)
 mainTableMessage=Mensagem
 mainTableType=Tipo Status
@@ -69,6 +66,7 @@ dialogPersonalizationTableCancel=Cancelar
 dialogPersonalizationTableColumns=Colunas
 
 messageWarningAmountAllocatedFill=Preencha pelo menos um campo no montante alocado para realizar a compensação!
+messageWarningAccountIsInitialZ=Conta não cadastrada na tabela de parâmetros. Por favor revisar!.
 
 messageErrorSearchData=Erro ao buscar títulos de clientes. Por favor tente novamente!
 messageErrorLaunchCustomerTitles=Erro ao fazer lançamento de títulos. Por favor tente novamente!
