ajuste nome de colunas

--- a/launchddctloss_001/webapp/i18n/i18n.properties
+++ b/launchddctloss_001/webapp/i18n/i18n.properties
@@ -37,7 +37,7 @@ mainTableTransactionCurrencyAmount=Montante
 mainTableDaysDelay=Dias atrasados
 
 #~~~ Main View - Dialog para lançamento de perdas ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-dialogDocumentReleaseDatesTitle=Lançamento de Peda Dedutível
+dialogDocumentReleaseDatesTitle=Lançamento de Perda Dedutível
 dialogDocumentReleaseDatesCancel=Cancelar
 
 dialogDocumentReleaseDatesValueStateError=Campo obrigatório. Favor preenchê-lo!
