--- a/leaseagreements_008/webapp/i18n/i18n.properties
+++ b/leaseagreements_008/webapp/i18n/i18n.properties
@@ -18,6 +18,10 @@ mainViewTitle=Contratos de Locação
 
 mainViewTableTitle=Locações
 
+mainViewTableAmount=Montante
+
+mainViewTableInformBilletDocumentNo=Informar Nº documento boleto
+
 mainViewfooterButtonExecute=Executar
 
 
