ajuste agrupamento de colunas

--- a/launchddctloss_001/webapp/i18n/i18n.properties
+++ b/launchddctloss_001/webapp/i18n/i18n.properties
@@ -18,6 +18,7 @@ mainViewTitle=Lançar Perda Dedutível (Clientes)
 
 mainLauncDDCTLoss=Lançar
 mainExportExcel=Excel
+mainButtonDisableGroup=Desabilitar Grupo
 
 mainTableTitle=Perdas Dedutíveis
 mainTableTitleParms=Perdas Dedutíveis ({0})
