ajuste campo corporatebank

--- a/customertitles_004/webapp/i18n/i18n.properties
+++ b/customertitles_004/webapp/i18n/i18n.properties
@@ -30,6 +30,8 @@ mainTableDocumentType=Tipo de documento
 mainTableItem=Item
 mainTableExercise=Exercício
 mainTableReferenceDocument=Referência
+mainTableTaxNumberType=Tipo de nº fiscal
+mainTableTaxIDNo=NºID fiscal
 mainTableDocumentDate=Data do documento
 mainTableReleaseDate=Data de lançamento
 mainTableHeaderText=Texto de cabeçalho
@@ -64,6 +66,9 @@ dialogPersonalizationTableConfirm=Ok
 dialogPersonalizationTableCancel=Cancelar
 
 dialogPersonalizationTableColumns=Colunas
+
+dialogCorporateBankValueHelpCorporateBank=Código do banco
+dialogCorporateBankValueHelpDescription=Descrição
 
 messageWarningAmountAllocatedFill=Preencha pelo menos um campo no montante alocado para realizar a compensação!
 messageWarningAccountIsInitialZ=Conta não cadastrada na tabela de parâmetros. Por favor revisar!.
