ajuste conta do razão e banco empresa

--- a/customertitles_004/webapp/i18n/i18n.properties
+++ b/customertitles_004/webapp/i18n/i18n.properties
@@ -47,6 +47,7 @@ dialogClieSecurClearCompensateSpecific=Compensar em conta específica
 dialogClieSecurClearCompensateBank=compensar com banco
 
 dialogClieSecurClearAccount=Conta do Razão
+dialogClieSecurClearAccountID=Chave breve da conta
 dialogClieSecurClearCorporateBank=Banco da empresa
 dialogClieSecurClearReleaseDate=Data de lançamento
 dialogClieSecurClearDocumentDate=Data do documento
